[tool.poetry]

name = "entrypoint"
version = "0.0.1"
description = "Entrypoint to python application."
authors = ["MAHDTech <MAHDTech@saltlabs.tech>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pytest-idem = "^3.1.0"
idem = "^20.9.3"
idem-aiohttp = "^3.0.0"
idem-helm = "^0.1.0"
idem-k8s = "^0.4.1"
idem-posix = "^3.3.0"
idem-sources = "^1.0.0"
idem-vault = "^0.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
entrypoint = "entrypoint:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
