[tool.poetry]

name = "entrypoint"
version = "0.0.1"
description = "Entrypoint to python application."
authors = ["MAHDTech <MAHDTech@saltlabs.tech>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pillow = "^10.2.0"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
entrypoint = "entrypoint:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
